Update Post “2020-11-18-batch-03”

--- a/src/content/posts/2020-11-18-batch-03.md
+++ b/src/content/posts/2020-11-18-batch-03.md
@@ -1,7 +1,7 @@
 ---
 template: blog-post
 title: Batch 03
-slug: batchfoo
+slug: /batch101
 date: 2020-11-18 17:11
 description: lorem
 featuredImage: /assets/screen-shot-2020-11-18-at-17.04.51.png
